# HBV

./: .gitignore  README.md
Rscr/: HBV_SCEUA.R  HBV_illustration.R  test_HBV.IANIGLA.R
data/: example_data.csv  example_data_Chitan.csv  example_para_dynamic.csv  example_sim.csv  gp.txt  gp_SCEUA.txt  sim.csv
doc/: technical_doc.md
scr/: CMakeLists.txt  Func_Groundwater.c  Func_Groundwater.h  Func_HBV.c  Func_HBV.h  Func_HBV_DynamicPara.c  Func_HBV_DynamicPara.h  Func_Metric.c  Func_OutPrint.c  Func_OutPrint.h  Func_Para.c  Func_Para.h  Func_Routing.c  Func_Routing.h  Func_Snow.c  Func_Snow.h  Func_Soil.c  Func_Soil.h  Func_dataIO.c  Func_dataIO.h  def_struct.h  main.c
